--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "permissions": ["CAMERA"]
+      "permissions": ["CAMERA","CAMERA_ROLL", "MEDIA_LIBRARY","READ_EXTERNAL_STORAGE","WRITE_EXTERNAL_STORAGE"]
     },
     "plugins": [
       [
