--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
     "expo": "~48.0.4",
-    "expo-file-system": "^15.2.2",
+    "expo-contacts": "~12.0.1",
+    "expo-file-system": "~15.2.2",
     "expo-image-picker": "~14.1.1",
+    "expo-media-library": "~15.2.3",
     "expo-status-bar": "~1.4.4",
     "express": "^4.18.2",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.14",
     "react-native-camera": "^4.2.1",
     "react-native-elements": "^3.4.3",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-base64": "^0.1.4",
     "react-native-image-picker": "^5.1.0",
@@ -36,6 +40,7 @@
     "react-native-view-shot": "3.5.0",
     "react-native-web": "~0.18.11",
     "react-navigation": "^4.4.4",
+    "rn-fetch-blob": "^0.12.0",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
