--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
+    "eas": "^0.1.0",
     "expo": "~48.0.4",
     "expo-contacts": "~12.0.1",
     "expo-file-system": "~15.2.2",
