--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "expo-media-library": "~15.2.3",
     "expo-status-bar": "~1.4.4",
     "express": "^4.18.2",
+    "gradle": "^1.2.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-native": "0.71.14",
+    "react-native": "^0.71.14",
     "react-native-camera": "^4.2.1",
     "react-native-elements": "^3.4.3",
     "react-native-fetch-blob": "^0.10.8",
